--- a/src/scss/grommet-core/_objects.box.scss
+++ b/src/scss/grommet-core/_objects.box.scss
@@ -1,5 +1,13 @@
 // (C) Copyright 2014-2016 Hewlett Packard Enterprise Development LP
 
+@mixin ieBoxSizeFix ($box-size) {
+  // IE11 fix so that child Boxes listen to boxes with size option
+  // @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  // .box {
+  //   width: $box-size;
+  // }
+}
+
 .box {
   display: flex;
   background-position: center center;
@@ -7,6 +15,11 @@
   background-repeat: no-repeat;
 
   @include pad();
+
+  @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+    max-width: 100vw;
+    max-height: 100%;
+  }
 
   // temporary flex grow capability
   > .flex {
@@ -360,17 +373,21 @@
 
   &-xsmall {
     width: $size-xsmall;
+    @include ieBoxSizeFix($size-xsmall);
   }
 
   &-small {
     width: $size-small;
+    @include ieBoxSizeFix($size-small);
   }
 
   &-medium {
     width: $size-medium;
+    @include ieBoxSizeFix($size-medium);
   }
 
   &-large {
     width: $size-large;
+    @include ieBoxSizeFix($size-large);
   }
 }
