allow masonry columns and column children to expand to container width using "full" option.

--- a/src/scss/grommet-core/_objects.columns.scss
+++ b/src/scss/grommet-core/_objects.columns.scss
@@ -20,6 +20,18 @@
   }
 }
 
+.#{$grommet-namespace}columns--full {
+  .#{$grommet-namespace}columns__column {
+    flex-grow: 1;
+
+    @include media-query(lap-and-up) {
+      > * {
+        width: auto;
+      }
+    }
+  }
+}
+
 .#{$grommet-namespace}columns--responsive {
   > .#{$grommet-namespace}columns__column {
     @include media-query(palm) {
